--- a/SimHubPlugin/UIFunction/CurveTab_Rudder.xaml
+++ b/SimHubPlugin/UIFunction/CurveTab_Rudder.xaml
@@ -1,16 +1,13 @@
-﻿<UserControl x:Class="User.PluginSdkDemo.UIFunction.GeneralSetting_KF"
+﻿<UserControl x:Class="User.PluginSdkDemo.UIFunction.CurveTab_Rudder"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:User.PluginSdkDemo.UIFunction"
              xmlns:localUI="clr-namespace:User.PluginSdkDemo.UIElement"
-             xmlns:localFunction="clr-namespace:User.PluginSdkDemo.UIFunction"
              xmlns:styles="clr-namespace:SimHub.Plugins.Styles;assembly=SimHub.Plugins" mc:Ignorable="d" 
-             xmlns:ui="clr-namespace:SimHub.Plugins.UI;assembly=SimHub.Plugins" 
              xmlns:controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-             d:DesignHeight="190" d:DesignWidth="540"
-             d:DataContext="{d:DesignInstance Type=localFunction:GeneralSetting_KF}">
+             d:DesignHeight="272" d:DesignWidth="540">
     <UserControl.Resources>
         <ResourceDictionary>
             <SolidColorBrush x:Key="TestBrush" Color="White"/>
@@ -305,35 +302,86 @@
         </ResourceDictionary>
     </UserControl.Resources>
     <Grid>
-        <Border Background="#7F4E4E4E" Height="190" CornerRadius="5,5,5,5" BorderThickness="0,2,0,0" >
-            <StackPanel HorizontalAlignment="Left" Height="190" VerticalAlignment="Top" Width="540">
-                <StackPanel Height="20" Width="540" Orientation="Horizontal">
-                    <Label Content="Noise Reduction Filter" Height="15" Width="150" Padding="0,0,0,0" VerticalContentAlignment="Center" FontFamily="Arial Black" HorizontalAlignment="Left" Margin="70,0,0,0"/>
+        <Border  HorizontalAlignment="Left" Height="272" VerticalAlignment="Top" Width="540" Background="#7F4E4E4E" CornerRadius="5,5,5,5">
+            <StackPanel HorizontalAlignment="Left" Height="272" VerticalAlignment="Top" Width="540">
+                <StackPanel Height="20" Width="540" VerticalAlignment="Top" HorizontalAlignment="Left" Orientation="Horizontal">
+                    <Label Content="FORCE CURVE ADJUSTMENT" Width="200" Foreground="White" FontFamily="Arial Black" HorizontalAlignment="Center" Margin="70,0,0,0" Height="20" VerticalAlignment="Top" Padding="0,0,0,0" VerticalContentAlignment="Center"/>
+                    <styles:SHButtonPrimary x:Name="btn_linearcurve_rudder" Click="btn_linearcurve_rudder_Click" Width="40" Content="Linear" Height="15" Margin="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="0,0,0,0" FontFamily="Arial" FontSize="10" MinHeight="15" VerticalContentAlignment="Center" />
+                    <styles:SHButtonPrimary x:Name="btn_Scurve_rudder" Click="btn_Scurve_rudder_Click" Width="45" Content="S-Curve" Height="15" Margin="5,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="0,0,0,0" VerticalContentAlignment="Center" FontFamily="Arial" FontSize="10" MinHeight="15" />
+                    <styles:SHButtonPrimary x:Name="btn_10xcurve_rudder" Click="btn_10xcurve_rudder_Click" Width="50" Content="Exponent" Height="15" Margin="5,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="0,0,0,0" VerticalContentAlignment="Center" FontFamily="Arial" FontSize="10" MinHeight="15" />
+                    <styles:SHButtonPrimary x:Name="btn_logcurve_rudder" Click="btn_logcurve_rudder_Click" Width="50" Content="Logarithm" Height="15" Margin="5,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="0,0,0,0" FontFamily="Arial" FontSize="10" MinHeight="15" VerticalContentAlignment="Center" />
+
                 </StackPanel>
-                <StackPanel Height="40" Width="540" Orientation="Horizontal" HorizontalAlignment="Left">
-                    <Label Content="Filter Model:" Height="20" Width="60" FontSize="10" Padding="0,0,0,0" VerticalContentAlignment="Center" Margin="70,0,0,0"/>
-                    <ComboBox x:Name="KF_filter_order"    Width="120" Height="10" FontSize="10" SelectedIndex="0" Margin="0,0,0,0" BorderThickness="0,0,0,0" SelectionChanged="KF_filter_order_SelectionChanged">
-                        <ComboBoxItem Content="KF const. vel."/>
-                        <ComboBoxItem Content="KF const. accel."/>
-                        <ComboBoxItem Content="Exponential filter"/>
-                        <ComboBoxItem Content="NONE"/>
-                    </ComboBox>
-                </StackPanel>
-                <StackPanel Width="400" Height="50">
-                    <StackPanel Width="400" Height="10" Orientation="Horizontal">
-                        <Label  Width="250" Foreground="White" RenderTransformOrigin="0.5,0.5" Canvas.Top="3" FontSize="10" FontFamily="Arial" Canvas.Left="5" HorizontalAlignment="Left" VerticalAlignment="Top" Content="Loadcell Denoising Factor (slow to fast)" Height="10" Padding="0,0,0,0"/>
+                <StackPanel Height="220" Width="540" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="0,5,0,0">
+                    <Canvas x:Name="canvas_rudder_curve" Height="200" Width="400" Background="#7F20232F" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="70,0,0,0" >
+                        <Canvas.RenderTransform>
+                            <TransformGroup>
+                                <ScaleTransform ScaleX="1" ScaleY="1"/>
+                                <SkewTransform/>
+                                <RotateTransform/>
+                                <TranslateTransform/>
+                            </TransformGroup>
+
+                        </Canvas.RenderTransform>
+
+
+
+                        <TextBlock HorizontalAlignment="Center" 
+                           VerticalAlignment="Top" 
+                           Text="FORCE" 
+                           Width="60" 
+                           Foreground="#7F7D7D7D" RenderTransformOrigin="0.5,0.5" Canvas.Left="-25" Canvas.Top="85" FontFamily="Arial Black" Height="13">
+                            <TextBlock.RenderTransform>
+                                <TransformGroup>
+                                    <ScaleTransform/>
+                                    <SkewTransform/>
+                                    <RotateTransform Angle="-90"/>
+                                    <TranslateTransform/>
+                                </TransformGroup>
+                            </TextBlock.RenderTransform>
+                        </TextBlock>
+
+
+                        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="TRAVEL" Width="60" Foreground="#7F7D7D7D" RenderTransformOrigin="0.5,0.5" Canvas.Left="170" Canvas.Top="186" FontFamily="Arial Black" TextAlignment="Center" Height="14"/>
+
+
+                        <Polyline x:Name="Polyline_RudderForceCurve" Stroke="{DynamicResource AccentColorBrush}" Height="300" Width="400" Opacity="0.7" Points="0,0 80,20 160,40 240,60 320,80 400,100" StrokeThickness="4" RenderTransformOrigin="1,0.5" Canvas.Top="-100" HorizontalAlignment="Left" VerticalAlignment="Center" >
+                            <Polyline.RenderTransform>
+                                <TransformGroup>
+                                    <ScaleTransform ScaleX="1" ScaleY="-1"/>
+                                    <SkewTransform/>
+                                    <RotateTransform/>
+                                    <TranslateTransform X="0"/>
+                                </TransformGroup>
+                            </Polyline.RenderTransform>
+                        </Polyline>
+                        <TextBlock x:Name="text_point_pos_rudder" HorizontalAlignment="Left" VerticalAlignment="Top" Text="pos" Width="60" Foreground="White" RenderTransformOrigin="0.5,0.5" Canvas.Left="5" Canvas.Top="15" Height="30" FontSize="10" FontFamily="Arial"/>
+                        <Rectangle x:Name="rect0_rudder" Width="10" Height="10" Fill="{DynamicResource AccentColorBrush}" Canvas.Left="-5" Canvas.Top="195" MouseLeftButtonDown="Rectangle_MouseLeftButtonDown" MouseMove="Rectangle_MouseMove_Rudder" MouseLeftButtonUp="Rectangle_MouseLeftButtonUp" Opacity="0.8" StrokeThickness="0"/>
+                        <Rectangle x:Name="rect1_rudder" Width="10" Height="10" Fill="{DynamicResource AccentColorBrush}" Canvas.Left="75" Canvas.Top="155" MouseLeftButtonDown="Rectangle_MouseLeftButtonDown" MouseMove="Rectangle_MouseMove_Rudder" MouseLeftButtonUp="Rectangle_MouseLeftButtonUp" Opacity="0.8"/>
+                        <Rectangle x:Name="rect2_rudder" Width="10" Height="10" Fill="{DynamicResource AccentColorBrush}" Canvas.Left="155" Canvas.Top="115" MouseLeftButtonDown="Rectangle_MouseLeftButtonDown" MouseMove="Rectangle_MouseMove_Rudder" MouseLeftButtonUp="Rectangle_MouseLeftButtonUp" Opacity="0.8"/>
+                        <Rectangle x:Name="rect3_rudder" Width="10" Height="10" Fill="{DynamicResource AccentColorBrush}" Canvas.Left="235" Canvas.Top="75" MouseLeftButtonDown="Rectangle_MouseLeftButtonDown" MouseMove="Rectangle_MouseMove_Rudder" MouseLeftButtonUp="Rectangle_MouseLeftButtonUp" Opacity="0.8"/>
+                        <Rectangle x:Name="rect4_rudder" Width="10" Height="10" Fill="{DynamicResource AccentColorBrush}" Canvas.Left="315" Canvas.Top="35" MouseLeftButtonDown="Rectangle_MouseLeftButtonDown" MouseMove="Rectangle_MouseMove_Rudder" MouseLeftButtonUp="Rectangle_MouseLeftButtonUp" Opacity="0.8"/>
+                        <Rectangle x:Name="rect5_rudder" Width="10" Height="10" Fill="{DynamicResource AccentColorBrush}" Canvas.Left="395" Canvas.Top="-5" MouseLeftButtonDown="Rectangle_MouseLeftButtonDown" MouseMove="Rectangle_MouseMove_Rudder" MouseLeftButtonUp="Rectangle_MouseLeftButtonUp" Opacity="0.8"/>
+                        <TextBox x:Name="text_rudder_log" HorizontalAlignment="Left" VerticalAlignment="Top" Text="" Width="400" Foreground="White" RenderTransformOrigin="0.5,0.5" Canvas.Left="0" Canvas.Top="0" Height="100" FontSize="10" FontFamily="Arial" Background="{x:Null}" BorderBrush="{x:Null}" CaretBrush="{x:Null}" SelectionTextBrush="{x:Null}" BorderThickness="0,0,0,0" IsReadOnly="True" Visibility="Hidden"/>
+
+
+
+                    </Canvas>
+
+                    <StackPanel Width="50" Height="230" Margin="10,-10,0,0">
+                        <Label x:Name="Label_max_force_rudder" Width="50" Height="24" Foreground="White" RenderTransformOrigin="0.5,0.5" Canvas.Top="3" FontSize="10" FontFamily="Arial" Canvas.Left="5" HorizontalAlignment="Left" VerticalAlignment="Top" Content="Min" Padding="0,0,0,0" Margin="0,-9,0,0"/>
+                        <controls:RangeSlider x:Name="Rangeslider_rudder_force_range" Style="{DynamicResource RangeSliderStyle}" MinRangeWidth="1" Grid.Column="2" Height="180" LowerValueChanged="Rangeslider_rudder_force_range_LowerValueChanged" UpperValueChanged="Rangeslider_rudder_force_range_UpperValueChanged" MinRange="3" IsSnapToTickEnabled="True" UpperValue="10" Width="20" Orientation="Vertical" Maximum="30" HorizontalAlignment="Left" LargeChange="0.1" Minimum="1" LowerValue="1" Value="1"/>
+                        <Label x:Name="Label_min_force_rudder" Width="50" Height="24" Foreground="White" RenderTransformOrigin="0.5,0.5" Canvas.Top="3" FontSize="10" FontFamily="Arial" Canvas.Left="5" HorizontalAlignment="Left" VerticalAlignment="Top" Content="Min" Padding="0,0,0,0"/>
                     </StackPanel>
-
-                    <localUI:SliderWithLabel x:Name="Slider_KF" SliderLength="400" SliderName="KF" SliderValue="128" MinValue="1" MaxValue="255" SliderValueChanged="KFValueChanged"/>
-
                 </StackPanel>
-                <StackPanel Height="20" Width="160" Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="70,0,0,0">
-                    <styles:SHToggleButton x:Name="Checkbox_joystick_denoise" Content="" Checked="Checkbox_joystick_denoise_Checked" Unchecked="Checkbox_joystick_denoise_Unchecked" IsChecked="False" FontSize="10" Width="35" Height="15" HorizontalAlignment="Left" FontFamily="Arial" ToolTip="Output the joystick value via vJoy" RenderTransformOrigin="0.5,0.5" Margin="-10,0,0,0" />
-                    <Label Content="Denoise for Joystick output" Height="20" Width="130" Padding="0,0,0,0" VerticalContentAlignment="Center" FontFamily="Arial" HorizontalAlignment="Left" FontSize="10" Margin="4,0,0,0"/>
+
+
+                <StackPanel Width="430" Height="40" Orientation="Horizontal" Margin="0,-10,0,0">
+                    <Label x:Name="Label_min_pos_rudder" Width="30" Height="40" Foreground="White" RenderTransformOrigin="0.5,0.5" Canvas.Top="3" FontSize="10" FontFamily="Arial" Canvas.Left="5" HorizontalAlignment="Left" VerticalAlignment="Top" Content="Min" Padding="0,0,0,0" HorizontalContentAlignment="Center"/>
+                    <controls:RangeSlider x:Name="Rangeslider_rudder_travel_range" Style="{DynamicResource RangeSliderStyle}" MinRangeWidth="1" Grid.Column="2" Height="20" LowerValueChanged="Rangeslider_rudder_travel_range_LowerValueChanged" UpperValueChanged="Rangeslider_rudder_travel_range_UpperValueChanged" MinRange="1" SmallChange="1" IsSnapToTickEnabled="True" UpperValue="95" Width="370" VerticalAlignment="Top" LowerValue="5" Minimum="5" Maximum="95" Value="85"/>
+                    <Label x:Name="Label_max_pos_rudder" Width="30" Height="40" Foreground="White" RenderTransformOrigin="0.5,0.5" Canvas.Top="3" FontSize="10" FontFamily="Arial" Canvas.Left="5" HorizontalAlignment="Left" VerticalAlignment="Top" Content="Min" Padding="0,0,0,0" HorizontalContentAlignment="Center"/>
                 </StackPanel>
-                <localUI:SliderWithLabel x:Name="Slider_KF_Joystick" SliderLength="400" SliderName="KF for Joystick Denoise" SliderValue="1" MinValue="1" MaxValue="255" SliderValueChanged="Slider_KF_Joystick_SliderValueChanged" Width="400" Height="40"/>
             </StackPanel>
-
         </Border>
     </Grid>
 </UserControl>
